AI-JADEDEVS4/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>New_Customer_Oppty_Closed_Won_Date__c</fullName>
        <label>New Customer Oppty Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Publicity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This used for legal purpose</description>
        <label>No Publicity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mapping this field from lead conversion if email contains .org</description>
        <label>Non Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_test__c</fullName>
        <inlineHelpText>Lead Notes is mapped to this field on Lead Conversion</inlineHelpText>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_AM_of_New_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify AM of New Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Number Closed Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Number Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Number Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Leads Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Number Leads Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Number Leads Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_New_Opportunities__c</fullName>
        <label>Number of Open New Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, Disqualified, Closed Won - Installments, Closed Non-Pursuit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opportunities__c</fullName>
        <label>Number of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, Disqualified, Closed Won - Installments, Closed Non-Pursuit</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OEM_AI__c</fullName>
        <description>Identifies accounts/opportunities that have transitioned from an OEM to AI</description>
        <inlineHelpText>Identifies accounts/opportunities that have transitioned from an OEM to AI</inlineHelpText>
        <label>Transitioning OEM to AI</label>
        <picklist>
            <picklistValues>
                <fullName>NetSuite</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <description>If On-Premise, which operating system is their server running?</description>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>openSUSE Linux 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Hat Enterprise Linux 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUSE Linux Enterprise 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Server 2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Server 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_CRM__c</fullName>
        <inlineHelpText>You have selected other in the CRM field, describe &quot;Other&quot;</inlineHelpText>
        <label>Other CRM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_HR__c</fullName>
        <label>Other HR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Solution_Expertise__c</fullName>
        <label>Partner Other Solution Specializations</label>
        <picklist>
            <picklistValues>
                <fullName>Birst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epicor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSFT AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSFT CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSFT GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pervasive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>proDacapo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QlikView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickBooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SugarCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tableau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRM_Adaptive_Expertise_Offered__c</fullName>
        <label>Adaptive Expertise Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRM_Annual_Revenue__c</fullName>
        <label>Partner Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1M - 9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10M - 24M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25M - 49M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50M - 99M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100M - 199M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200M - 499M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500M - 1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Currently_Has_Active_Leads__c</fullName>
        <label>Partner Currently Has Active Leads</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Description__c</fullName>
        <description>This fied to capture the partner description from Relayware for partner locater</description>
        <inlineHelpText>This field populates the Partner Locator on the Adaptive Insights website</inlineHelpText>
        <label>Partner Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_Desired_Geographic_Territory__c</fullName>
        <label>Partner Desired Geographic Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_Founded__c</fullName>
        <label>Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRM_No_Employees_Focused_on_Adaptive__c</fullName>
        <label>Number Employees Focused on Adaptive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRM_Number_of_Active_Customers__c</fullName>
        <label>Number of Active Customers</label>
        <picklist>
            <picklistValues>
                <fullName>1-10 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001-3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Program_Primary_Interest__c</fullName>
        <label>Partner Program Primary Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Solution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Services_Planned_to_Offer__c</fullName>
        <label>Partner Services Planned to Offer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRM_Target_Market_Segment__c</fullName>
        <label>Partner Target Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$50m Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50M - $250M Mid-Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$250M Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRM_Tell_Us_Why_Interested__c</fullName>
        <label>Partner Tell Us Why Interested</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pain_Points__c</fullName>
        <inlineHelpText>What pain is the customer experiencing that motivates them to explore a solution?</inlineHelpText>
        <label>Reason for change/Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Annual_Rev__c</fullName>
        <inlineHelpText>the Annual Rev. of the parent company, field data is manually entered, used to differenciate divisions vs hq/parent</inlineHelpText>
        <label>Parent Annual Rev.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <inlineHelpText>GSI(Global System Integrator)
ISV(Independent Software Vendor)
BPO(Business process outsourcing)</inlineHelpText>
        <label>Partner Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>GSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Manager_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Partner Managers have &apos;Channels&apos; in their Roles:</inlineHelpText>
        <label>Partner Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Type__c</fullName>
        <label>Partner Commission Type</label>
        <picklist>
            <picklistValues>
                <fullName>No commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time first year commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time full commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing full commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-sell commission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Email__c</fullName>
        <label>Partner Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Full_Name__c</fullName>
        <description>This field used to pre-populate the contact full name on Partner NDA agreements</description>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <label>Partner Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Title__c</fullName>
        <description>This field used to pre-populate the title on partner docusign NDA agreement form</description>
        <formula>Partner_Contact__r.Title</formula>
        <label>Partner Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Partner Contact who submitted this Lead.</description>
        <inlineHelpText>The Partner Contact who submitted this Lead.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Partner Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Geographic_Coverage__c</fullName>
        <label>Partner Geographic Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rest of the World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Implementer)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Partner Name Manually Uploaded</description>
        <inlineHelpText>This is primarily used by Channels Team but if you have to add a partner to this account, then please send an email to partners@adaptiveinsights.com</inlineHelpText>
        <label>Partner Name</label>
        <picklist>
            <picklistValues>
                <fullName>101 Business Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>123ConnectA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3RP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abacist Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abacus Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABM Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelcia Business Services, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCM SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountemps/RHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Microsystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCPAC International, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accretive (TX - Horn Murdock Cole)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accretive Solutions Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AcctTwo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdaptivePro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP (New England Partner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP (So San Francisco)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Solutions &amp; Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM-Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akiratech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance of Merger &amp; Acquisition Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALSIGHT (Laurent ALLAIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altico Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alui Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Massage and Therapeutic Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American United Technologies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Owner__c</fullName>
        <formula>$User.ContactId =  Partner_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If you need to add or remove the partner please contact channel team.</description>
        <inlineHelpText>If you need to add or remove the partner please contact channel team.</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Accounts</relationshipLabel>
        <relationshipName>Accounts_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Coverage__c</fullName>
        <label>Partnership Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmanaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_Code__c</fullName>
        <label>Primary Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>SUPPORT: Support unable to resolve issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPANY: Change in Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPANY: Bankruptcy / Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPANY: Market downturn (only for reduction)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPANY: Lost champion / sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HABITS: Never rolled out to broader community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HABITS: Lack of end user adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HABITS: Not core to business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTM: Over-sold in sales cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMPLEMENTATION: Implementation Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT: Product Feature Gaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT: Performance / Scalability issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT: Lack of product usability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT / BUGS: Product Defect(s) / Regression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMPLEMENTATION: Implementation Not Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_for_Cancel__c</fullName>
        <inlineHelpText>Primary reason for cancellation or reason for not implementing

Business process/priorities changed includes Corporate directive to use corporate application</inlineHelpText>
        <label>Cancels: Primary Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Champion Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Control (Acquired or Financial Issues)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has system w/ module that subs for AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacking Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance/Scalability Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Usability Issues and/or Lacking Key Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfinished/Poor Implementation Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive to contacts: reason unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Status__c</fullName>
        <inlineHelpText>Is the client in production with Adaptive?</inlineHelpText>
        <label>Production Status</label>
        <picklist>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publicity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Customer allows Adaptive to publicize their information (such as their Company Logo)</description>
        <label>Publicity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RecordTypeUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Materials__c</fullName>
        <description>Field used to document existing marketing materials for the account.</description>
        <inlineHelpText>Field used to document existing marketing materials for the account.</inlineHelpText>
        <label>Reference Materials</label>
        <picklist>
            <picklistValues>
                <fullName>Case Study, Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study, Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Win Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release Mention</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>